<?xml version="1.0"?>
<package>
  <name>ultrasonic_node</name>
  <version>0.2.3</version>
  <description>ultrasonic_node</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>
  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
